src/index.css
@import url("https://fonts.googleapis.com/css2?family=Sofia+Sans+Condensed&family=Sofia+Sans:wght@300;400&display=swap");

body {
  font-family: "Sofia Sans", sans-serif;
  margin: 0;
  background-color: rgb(247, 247, 247);
}

p {
  line-height: 2;
  font-size: 17.2px;
  /* text-align:justify; */
}

main {
  margin: 0 auto;
}

a {
  text-decoration: none;
  color: #4d717d;
}

a:hover {
  text-decoration: underline;
}

/*inputs*/

input,
textarea {
  height: 32px;
  padding: 0 16px;
  font-family: "Sofia Sans Condensed", sans-serif;
  font-size: 20px;
  background-color: rgb(247, 247, 247);
  color: rgb(0, 0, 0);
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  border-bottom-width: 1.9px;
  border-left-width: 1.9px;
  border-right-width: 1.9px;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border-top-width: 1.9px;
  box-sizing: border-box;
  cursor: text;
}

input:focus,
textarea:focus {
  outline: none;
}

/*Banner*/

#banner {
  height: 50vh;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  background: rgba(0, 0, 0, 0) url("/public/img/namine banner 2.jpeg");
  background-size: cover;
  background-attachment: scroll;
  background-position: center;
  background-blend-mode: overlay;
  color: white;
  margin: 0;
}

/*navigation*/

nav {
  height: 80px; /* Adjust height as needed */
  background: rgb(247, 247, 247);
  width: 100%;
  margin: 0;
  position: relative;
  font-family: "Sofia Sans Condensed", sans-serif;
  font-size: 20px;
  display: flex;
  justify-content: center; /* Center items horizontally */
  align-items: center; /* Center items vertically */
  z-index: 100;
}

/* .navbar-nav {
  display: flex;
  justify-content: center;
  align-items: center;
} */

/* .offcanvas-body {
  margin-right: 7%;
} */

/* .navbar-nav {
  margin-left: 29%;
} */

.navbar-nav a {
  padding: 0 100px;
  color: #4d717d;
  transition: 0.4s;
  text-align: center;
  margin-left: 25px;
  margin-right: 25px;
}

.navbar-nav a:hover {
  text-decoration: underline;
  color: #90acaf;
}

nav ul {
  display: flex;
  list-style: none;
  justify-content: center;
  align-items: center;
  margin-left: 3%;
  padding: 0;
}

.offcanvas {
  width: 50vh;
}

.navbar-toggler {
  display: end;
}

/* .active{
  text-decoration: underline;
} */

.logo-img img {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  left: 51%;
  background-attachment: scroll;
  transform: translateX(-50%);
  top: 70px;
  height: auto;
  width: 115px;
  border-radius: 50%;
  border: transparent;
  background-color: rgb(247, 247, 247);
  border-radius: 55%;
  padding: 8px;
}

/*footer*/

footer {
  background: #789ca8;
  color: rgb(247, 247, 247);
  display: flex;
  align-items: center;
  align-content: center;
  justify-content: center;
}

footer a {
  color: rgb(247, 247, 247);
  font-size: 26px;
}

footer a:hover {
  color: #4d717d;
}

footer h3 {
  font-weight: 600;
  font-size: 23px;
  margin-top: 10%;
  text-align: center;
}

footer #social-media-footer a.fa-instagram,
footer #social-media-footer a.fa-tiktok,
footer #social-media-footer a.fa-x-twitter {
  color: rgb(247, 247, 247);
  transition: 0.4s;
}

footer #social-media-footer ul {
  display: flex;
  list-style: none;
  justify-content: center;
  align-items: center;
  align-content: center;
  margin-right: 10%;
  margin-bottom: 0%;
}

footer #social-media-footer ul li {
  font-size: 25px;
  padding: 10px;
  transition: 0.4s;
}

footer #social-media-footer ul li:hover a .fa-instagram {
  color: #4d717d;
}

footer #social-media-footer ul li:hover a .fa-tiktok {
  color: #4d717d;
}
footer #social-media-footer ul li:hover a .fa-x-twitter {
  color: #4d717d;
}
footer p {
  padding-bottom: 20px;
  margin: auto;
  font-size: 16px;
  text-align: center;
}

.container.about-page {
  width: 70%;
  text-align: justify;
  margin-bottom: 10%;
}

.About h2 {
  margin-top: 5%;
  margin-bottom: 3%;
  margin-left: 15%;
  margin-right: 15%;
}

.container.home {
  width: 100%;
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  padding-top: 50px;
  padding-bottom: 80px;
}

.gallery {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  grid-gap: 5px;
}

.gallery img {
  width: 100%;
  border-radius: 5px;
}

.gallery img:hover {
  box-shadow: 0 10px 6px -6px #aeaeae;
}

.illustration-search {
  margin-right: 5%;
  margin-left: 5%;
  margin-bottom: 2%;

}

.illustration-container .illustration-gallery {
  margin-left: 1%;
  margin-right: 1%;
  margin-bottom: 10%;
}

.illustration-gallery {
  margin: 0 auto;
  -webkit-column-count: 5;
  -webkit-column-gap: 0px;
  -webkit-row-gap: 5px;
  -moz-column-count: 5;
  -moz-column-gap: 0px;
  -moz-row-gap: 5px;
  column-count: 5;
  column-gap: 5px;
  row-gap: 5px;
}

.illustration-gallery img {
  width: 100% !important;
  height: auto !important;
  border-radius: 5px;
  margin-top: 5px;
}
.illustration-gallery {
  display: inline-block;
  margin-right: auto;
  margin-left: auto;
}

/* contact form - contact page */

#business-inquiries {
  font-size: 16;
  margin: 15px 0px 150px 150px;
}

#business-inquiries p {
  font-size: 17.5;
  text-align: justify;
  margin-left: 21%;
  margin-right: 29%;
  margin-bottom: 3%;
  margin-top: 8%;
}

.container.contact-page {
  display: flex;
  justify-content: center;
  width: 50%;
  margin-right: 29%;
  padding-top: 15px;
  background-color: rgb(235, 231, 231);
  border-radius: 10px;
}

.contact-form form {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 5%;
  margin-top: 5%;
}

.contact-form input {
  background-color: white;
  width: 80%;
  font-size: 20px;
  border-radius: 10px;
  border: 1px solid rgb(148, 148, 148);
  margin-bottom: 5%;
  margin-left: 4%;
}

.contact-form textarea {
  background-color: white;
  width: 80%;
  height: 50%;
  padding: 5px 10px;
  border-radius: 10px;
  border-color: rgb(148, 148, 148);
  border: 1px solid rgb(148, 148, 148);
  margin-bottom: 5%;
  margin-left: 4%;
}

.contact-form button {
  background-color: #4d717d;
  border-radius: 10px;
  border-color: transparent;
  font-size: 22px;
  color: white;
  padding: 3px 13px;
}

.contact-form button:hover {
  opacity: 70%;
  cursor: pointer;
}

.contact-page-image img {
  width: 255px;
  height: auto;
  border-radius: 10px;
  margin-left: 10%;
  margin-top: 3%;
}

/*Media Queries*/

/* query for mobiles devices */
@media only screen and (max-width: 575.98px) {
  nav {
    height: 60px;
  }
  nav ul {
    display: flex;
    list-style: none;
    justify-content: start;
    align-items: start;
    margin: 0px;
    padding: 0px;
  }
  nav ul li {
    margin: 0px;
    padding: 0px;
  }
  .navbar-nav a {
    text-align: start;
  }

  .offcanvas a {
    padding: 2%;
    margin-bottom: 3%;
    font-size: 25px;
  }
  #banner {
    height: 25vh;
  }
  footer p {
    margin: auto;
  }
  .logo-img img {
    background-color: rgb(247, 247, 247);
    border-radius: 55%;
    padding: 8px;
    width: 110px;
    margin-top: -5%;
  }
  .container.home {
    width: 100%;
    margin-top: 10%;
    margin-bottom: 10%;
    padding: 8px;
  }
  .gallery {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(155px, 1fr));
    grid-gap: 5px;
  }
  .container.about-page {
    width: 90%;
    text-align: justify;
    margin-bottom: 15%;
  }
  .About h2 {
    margin-top: 8%;
    margin-left: 8%;
  }
  .About p {
    line-height: 1.7;
  }
  .illustration-search {
    margin: 0px 0px 20px 0px;
    padding: 0px;
  }
  .illustration-gallery {
    -moz-column-count: 2;
    -webkit-column-count: 2;
    column-count: 2;
    padding: 5px;
    margin-bottom: 0px;
  }
  .illustration-container .illustration-gallery {
  margin-bottom: 0px;
}
  #business-inquiries {
    margin: auto;
    margin-bottom: 10%;
  }
  #business-inquiries p {
    font-size: 17px;
    line-height: 1.7;
    text-align: justify;
    margin-left: 10%;
    margin-right: 10%;
    margin-bottom: 8%;
    margin-top: 10%;
  }
  .container.contact-page {
    display: flex;
    justify-content: center;
    width: 90%;
    margin: auto;
    background-color: rgb(235, 231, 231);
    border-radius: 10px;
  }

  .contact-form form {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .contact-form input {
    background-color: white;
    width: 100%;
    font-size: 17px;
    border-radius: 10px;
    border: 1px solid rgb(148, 148, 148);
  }

  .contact-form textarea {
    font-size: 17px;
    background-color: white;
    width: 100%;
    height: 100px;
    padding: 5px 10px;
    border-radius: 10px;
    border-color: rgb(148, 148, 148);
    border: 1px solid rgb(148, 148, 148);
  }

  .contact-form button {
    background-color: #4d717d;
    border-radius: 10px;
    border-color: transparent;
    font-size: 17px;
    color: white;
    padding: 3px 13px;
    margin-bottom: 15%;
  }

  .contact-page-image img {
    width: 170px;
    height: auto;
    border-radius: 10px;
    margin-right: 10px;
    margin-left: 0px;
  }
}

/* @media (min-width: 768px) {
  main {
    width: 100%;
  }

  .gallery {
    width: 80%;
  }
  .gallery img {
    width: 100%;
  }
} */

